kitsune/sumo/static/less/products.less
@import 'variables.less';
@import 'vendors.less';

@import 'includes/help-topics.less';
@import 'includes/product-title.less';
@import 'includes/topic-list.less';

.logo-sprite {
  float: left;
  margin: 0 8px 0 0;
}

.download-firefox {
  font-family: 'Open Sans','Droid Arabic Naskh','Mplus Fulah',sans-serif;
  position: absolute;
  right: 0;
  text-align: center;
  top: 0;

  .download-button {
    .gradient(#81BC2E, #81BC2E, #659324);
    .border-radius(5px);
    .box-shadow(~"0 1px 0 0 rgba(0, 0, 0, 0.2), 0 -1px 0 0 rgba(0, 0, 0, 0.3) inset");
    display: block;
    line-height: 20px;
    position: relative;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    transition: top 0s;
    transition: all 0.5s;
    width: 230px;

     .download-content {
       background: url('../img/firefox-small.png') no-repeat;
       color: #B5E786;
       display: block;
       min-height: 40px;
       margin-left: -34px;
       padding: 10px 20px 8px 73px;

       .download-title {
         color: #fff;
         display: block;
         font-size: 22px;
         font-weight: normal;
         letter-spacing: -0.02em;
         padding-right: 25px;
        }

       .download-subtitle{
         font-size: 12px;
        }

       .download-lang{
         color: #346012;
         font-size: 11px;
         position: absolute;
         right: -25px;         
         top: 20px;
         text-shadow: 0px 1px rgba(255, 255, 255, 0.2);
         width: 100px;
      }
    }

    &:hover {
      .box-shadow(~"0 2px 0 0 rgba(0, 0, 0, 0.1), 0 -2px 0 0 rgba(0, 0, 0, 0.2) inset, 0 12px 24px 2px #83C822 inset");
      text-decoration: none;
    }

    &:active {
      .box-shadow(~"0 2px 0 0 rgba(0, 0, 0, 0.1), 0 -1px 0 0 rgba(0, 0, 0, 0.3) inset, 0 12px 24px 2px #83C822 inset");
    }
  }

  ul.info {
    font-size: 0.7em;
    margin: 4px 0 0 0;
    padding: 0;

    li {
      list-style: none;
      display: inline;

      a {
        color: #999;
      }

      &:not(:first-child):before {
        content: "|";
        color: #999;
        padding-right: 3px;
      }
    }
  }
}

.refresh-firefox {
  display: none;
  font-family: 'Open Sans','Droid Arabic Naskh','Mplus Fulah',sans-serif;
  position: absolute;
  right: 0;
  text-align: center;
  top: 0;

  > a {
    color: #999;
    display: block;
  }

  .help-text {
    font-size: 18px;
    margin-bottom: 4px;
  }

  .reset-link {
    font-size: 0.7em;
    margin-bottom: 6px;
  }

  > .btn.btn-submit {
    font-family: @OpenSans;
    font-size: 18px;
    padding: 10px 30px;
  }
}

.topic-title {
  margin-bottom: 0;

  &.has-image {
    margin-left: 88px;
  }

  &.cf {
    margin-bottom: 20px;
  }

  & + .topic-title {
    margin-bottom: 0;
    margin-top: 0;
    padding-left: 28px;
    position: relative;

    &:before {
      background: @iconsSprite no-repeat -54px -2138px;
      content: '';
      height: 16px;
      left: 10px;
      position: absolute;
      top: 14px;
      width: 8px;
    }
  }
}

.topic-description {
  margin-top: 0;
}

.sidebar-nav {
  &.topics {
    background-color: #e0e5e8;
    background-image: url('../img/grain.png');

    > li {
      &.subtopic-selected {
        > a,
        > a:visited {
          .linear-gradient-top(#e0e5e8, #c5c8cb, 0%, #e0e5e8, 80%, url('../img/grain.png'));
          border: 0;
        }
      }

      > ul {
        list-style: none;
        margin: 0;
        padding: 0;
        text-transform: none;

        > li {
          > a,
          > a:visited {
            color: @textDarkGrey;
            display: block;
            padding: 12px 20px;
            text-decoration: none;
          }

          > a:hover {
            color: @textDarkBlue;
            text-decoration: none;
          }

          &.selected {
            > a {
              background: #fff;
              font-weight: bold;
              position: relative;

              &:after {
                background: url('../img/sidebar-arrow.gif') 0 3px no-repeat;
                content: '';
                height: 30px;
                left: 0;
                margin-top: -15px;
                position: absolute;
                top: 50%;
                width: 15px;
              }
            }

            > a:hover {
              color: @textDarkGrey;
            }
          }
        }
      }
    }
  }
}

#focus-and-refine {
  ul {
    list-style: none;
    margin: 10px 0 0;
    padding: 0;

    li {
      float: left;
      margin: 5px 0 0;
      width: 50%;

      &.selected {
        font-weight: bold;

        a {
          color: @textGrey;
        }
      }

      &:nth-child(2n+1) {
        clear: left;
      }
    }
  }
}

#get-involved-button {
  text-align: center;

  .btn {
    font-size: 18px;
    padding: 9px 48px 12px;
  }
}

#document-list {
  > ul {
    background: #fff;
    padding: 30px;
  }

  .topic-list {
    margin-top: 30px;
  }
}

.html-rtl {
  .download-firefox {
    left: 20px;
    right: auto;
  }

  .download-thunderbird {
    left: 20px;
    right: auto;
  }

  h1.product-title .logo-sprite {
    float: right;
    margin: 0 0 0 8px;
  }
}

.download-thunderbird {
  font-family: georgia,"Bitstream Charter",serif;
  position: absolute;
  right: 0;
  top: 0;

  .download-button {
    .gradient(#81BC2E, #81BC2E, #659324);
    .border-radius(6px);
    .box-shadow(~"0 3px 0 0 rgba(0,0,0,0.1), 0 -4px 0 0 rgba(0,0,0,0.1) inset");
    display: block;
    line-height: 20px;
    position: relative;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    transition: top 0s;
    transition: all 0.5s;
    width: 250px;

     .download-content {
       background: url('../img/thunderbird-download.png') no-repeat;
       color: #B5E786;
       display: block;
       height: 79px;
       margin-left: -50px;
       padding: 10px 20px 8px 73px;

       .download-title {
         color: #FFFFFF;
         display: block;
         font-size: 26px;
         font-weight: normal;
         font-family: georgia,"Bitstream Charter",serif;
         line-height: 28px;
         margin-top: 10px;
         margin-left: 35px;
         padding-right: 25px;
         text-align: left;
        }

       .download-subtitle{
         color: #fff;
         display: block;
         font-size: 18px;
         font-weight: normal;
         font-style: italic;
         font-family: georgia,"Bitstream Charter",serif;
         line-height: 18px;
         margin-left: 36px;
         padding-right: 25px;
         position: relative;
         text-align: left;
        }

       .download-lang{
         display: block;
         margin-top: 3px;
         font-size: 12px;
         font-style: normal;
         line-height: 15px;
         color: #346012;
         position: relative;
         left: 38px;
         text-shadow: 0px 1px rgba(255, 255, 255, 0.2);
         text-align: left;
      }
    }

    &:hover {
      .box-shadow(~"0 2px 0 0 rgba(0, 0, 0, 0.1), 0 -2px 0 0 rgba(0, 0, 0, 0.2) inset, 0 12px 24px 2px #83C822 inset");
      text-decoration: none;
    }

    &:active {
      .box-shadow(~"0 2px 0 0 rgba(0, 0, 0, 0.1), 0 -1px 0 0 rgba(0, 0, 0, 0.3) inset, 0 12px 24px 2px #83C822 inset");
    }
  }
    ul {
      list-style: none;
      margin: 0;
      padding: 0;

      > li {
        border-bottom: 0;
        padding: 12px 0;

        &:last-of-type {
          border-bottom: 0;
          padding-bottom: 0;
        }
      }
    }
  }

  ul.info {
    font-size: 0.7em;
    margin: 2px 0 0 0;
    padding: 0;

    li {
      list-style: none;
      display: inline;

      a {
        color: #999;
      }

      &:not(:first-child):before {
        content: "|";
        color: #999;
        padding-right: 3px;
      }
    }
  }

